# EncounterOS

./: README.md  app_paths.py  build.bat  combat_tab.py  config.json  dialog.json  dialog.txt  dialog_blocks.json  dialog_meta.json  dialog_tab.py  encounteros.spec  encounters_io.py  encounters_tab.py  gm_ui.py  gm_ui_hotkeys_v2.ahk  gm_window.py  helpers.py  main.py  migrate_party.py  notes_tab.py  party.json  pyproject.toml  readme.txt  requirements.txt  rosters_tab.py  styles.py  timers_tab.py  tracker_overlay.py
data/rosters/: Draw Steel - Aberrations, Horrors.json  Draw Steel - Angels, Elements, Constructs.json  Draw Steel - Beasts, Predators.json  Draw Steel - Chimeras, Behemoths.json  Draw Steel - Constructs, War Dogs.json  Draw Steel - Demons.json  Draw Steel - Dragons.json  Draw Steel - Fey, Tricksters.json  Draw Steel - Giants.json  Draw Steel - Harpies.json  Draw Steel - Humans.json  Draw Steel - Minotaurs.json  Draw Steel - Monster Armies.json  Draw Steel - Ogres.json  Draw Steel - Trolls.json  Draw Steel - Undead.json  Draw Steel - Yuan-ti.json  SRD Creatures (2024) - Celestials & Elementals.json  SRD Creatures (2024) - Dragons.json  SRD Creatures (2024) - Fiends.json  SRD Creatures (2024) - Giants & Monstrosities.json  SRD Creatures (2024) - Humanoids.json  SRD Creatures (2024) - Oozes, Plants & Constructs.json  SRD Creatures (2024) - Undead.json  _session.json  goblins.json
themes/dark_parchment/: style.qss  theme.json
themes/gm_modern/: style.qss  theme.json
themes/retro_rpg/: style.qss  theme.json
themes/rpg-retro/: theme.json
(+2 files in other folders)
