[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "encounteros"
version = "1.0.0"
description = "D&D-style combat tracker overlay and GM control panel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "markdown>=3.4.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
